# AI-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
docs/: architecture.md  index.md
docs/adr/: 0001-repo-shape.md
docs/contracts/: cli.md
docs/workflows/: development.md
samples/: intro_note.txt
scripts/: check.ps1  check_architecture.py  check_docs.py  context.ps1  tree.ps1  verify.ps1
skills/extract-learning-points/: SKILL.md
skills/extract-learning-points/agents/: openai.yaml
src/harness_ai_learning/: __init__.py  __main__.py  models.py  pipeline.py
src/harness_ai_learning/application/: __init__.py  analyze_material.py
src/harness_ai_learning/domain/: __init__.py  contracts.py  harness.py  study_output.py
src/harness_ai_learning/harness/: __init__.py  loop.py
src/harness_ai_learning/infrastructure/: __init__.py
src/harness_ai_learning/infrastructure/processors/: __init__.py  composite.py  pdf.py  text.py
src/harness_ai_learning/infrastructure/providers/: __init__.py  mock.py  qwen.py
src/harness_ai_learning/interfaces/cli/: main.py
src/harness_ai_learning/runtime/: __init__.py  defaults.py
tests/: test_cli.py  test_pipeline.py
