[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-ai-learning"
version = "0.1.0"
description = "A Dockerized CLI study assistant built with harness-engineering practices."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=2.30.0",
]

[project.scripts]
harness-ai-learning = "harness_ai_learning.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
